# ros_test

beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/src/: image_returner.py  topic_publisher.py  topic_subscriber.py
image_publisher/: CMakeLists.txt  package.xml
image_publisher/src/: image_publisher.py
yolov5_ros/: CMakeLists.txt  package.xml
yolov5_ros/launch/: yolov5.launch
yolov5_ros/scripts/: detectDepth.py  listenerDetect.py  listenerTf.py  realDetect.py  realsense_depth.py  talkerDetect.py  talkerDetectLaunch.py  talkerDetectLaunch2.py  talkerDetectTransform.py
yolov5_ros/scripts/data/: kettleapple.yaml
yolov5_ros/scripts/utils/: general.py  plots.py
