<?xml version="1.0"?>
<package format="2">
  <name>yolov5_ros</name>
  <version>0.1.0</version>
  <description>The yolov5_ros package is used to detect objects and their depths with Intel RealSense D435 Camera</description>

  <maintainer email="m.sielski@ostfalia.de">Maurice Sielski</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/yolov5_ros</url>
  <author email="m.sielski@ostfalia.de">Maurice Sielski</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
